--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,22 @@
-node_modules
-.parcel-cache/
-dist/
-.env
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-coverage/
-.vscode/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
